--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -21,11 +21,12 @@
 
   main {
     position: relative;
-    z-index: 5;
+    z-index: 10;
     width: 100%;
     margin: 0 auto;
     @include transition(.7s all);
     &.transition {
+      z-index: 5;
       @include opacity(0);
       transform: scale(.8);
       // margin-top: -100em;
@@ -89,6 +90,7 @@
 
   .ingredient {
     padding: 10px 0;
+    font-size: 25px;
 
     span {
       position: relative;      
@@ -223,7 +225,7 @@
     position: absolute;
     top: 0;
     left: 15px;
-    z-index: 10;
+    z-index: 5;
     width: 100%;
     @include opacity(0);
     background: black;
@@ -254,6 +256,7 @@
       }
     }
     &.transition {
+      z-index: 10;
       @include opacity(1);
       transform: scale(1);
     }
