--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -77,6 +77,7 @@
     p {
       margin-bottom: 0;
       color: $font-purple;
+      @include respond-to(min-width, $desktop) { font-size: 22px; }
     }
     .quantity { color: white; }
     .measurement {
